fix alignment issue in contacr alert

--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -97,6 +97,9 @@
     border: 2px solid darken(@tan, 2%);
     border-radius: 10px;
 
+    .alert {
+      margin: 15px 0px;
+    }
     .form-group:first-child {
       display: none;
     }
